--- a/index.html
+++ b/index.html
@@ -3,52 +3,36 @@
 <head>
   <meta charset="UTF-8">
   <title></title>
-  <style type="text/css">
-  h1 {
-    font-family: sans-serif;
-    font-size: 4em;
-    color: black;
-    text-align: center;
-  }
 
-  h1 em {
-    font-size: 1.3em;
-
-  }
-
-  canvas {
-    display: block;
-    margin: 0 auto;
-  }
-  </style>
+  <link media="all" href="css/style.css" type="text/css" rel="stylesheet">
 </head>
 <body>
   <h1>'STROIDS</h1>
   <canvas width="500" height="500"></canvas>
 
-      <script src="underscore.js" type="text/javascript"></script>
-      <script src="keymaster.js"></script>
-      <script src="utility.js" type="text/javascript"></script>
-      <script src="preloader.js" type="text/javascript"></script>
-      <script src="moving_object.js"></script>
-      <script src="asteroid.js" type="text/javascript"></script>
-      <script src="bullet.js" type="text/javascript"></script>
-      <script src="ship.js" type="text/javascript"></script>
-      <script src="game.js" type="text/javascript"></script>
-      <script>
-      var imagePreloader = new Preloader.ImagePreloader({
-        bullet: "laser.png",
-        ship: "ship.png",
-        m1: "m1.png",
-        m2: "m2.png",
-        bg: "darkPurple.png"
-      }, function(images) {
-          var canvas = document.getElementsByTagName("canvas")[0];
-          var ctx = canvas.getContext('2d');
-          var game = new Asteroids.Game(ctx, images.bullet, images.ship, [images.m1, images.m2], images.bg);
-          game.start();
-      });
+  <script src="underscore.js" type="text/javascript"></script>
+  <script src="keymaster.js"></script>
+  <script src="utility.js" type="text/javascript"></script>
+  <script src="preloader.js" type="text/javascript"></script>
+  <script src="moving_object.js"></script>
+  <script src="asteroid.js" type="text/javascript"></script>
+  <script src="bullet.js" type="text/javascript"></script>
+  <script src="ship.js" type="text/javascript"></script>
+  <script src="game.js" type="text/javascript"></script>
+  <script>
+  var imagePreloader = new Preloader.ImagePreloader({
+    bullet: "laser.png",
+    ship: "ship.png",
+    m1: "m1.png",
+    m2: "m2.png",
+    bg: "darkPurple.png"
+  }, function(images) {
+      var canvas = document.getElementsByTagName("canvas")[0];
+      var ctx = canvas.getContext('2d');
+      var game = new Asteroids.Game(ctx, images.bullet, images.ship, [images.m1, images.m2], images.bg);
+      game.start();
+  });
 
-      </script>
+  </script>
 </body>
 </html>
