--- a/index.html
+++ b/index.html
@@ -10,15 +10,15 @@
   <h1>'STROIDS</h1>
   <canvas width="500" height="500"></canvas>
 
-  <script src="underscore.js" type="text/javascript"></script>
-  <script src="keymaster.js"></script>
-  <script src="utility.js" type="text/javascript"></script>
-  <script src="preloader.js" type="text/javascript"></script>
-  <script src="moving_object.js"></script>
-  <script src="asteroid.js" type="text/javascript"></script>
-  <script src="bullet.js" type="text/javascript"></script>
-  <script src="ship.js" type="text/javascript"></script>
-  <script src="game.js" type="text/javascript"></script>
+  <script src="js/underscore.js"></script>
+  <script src="js/keymaster.js"></script>
+  <script src="js/utility.js"></script>
+  <script src="js/preloader.js"></script>
+  <script src="js/moving_object.js"></script>
+  <script src="js/asteroid.js"></script>
+  <script src="js/bullet.js"></script>
+  <script src="js/ship.js"></script>
+  <script src="js/game.js"></script>
   <script>
   var imagePreloader = new Preloader.ImagePreloader({
     bullet: "laser.png",
