--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@
   <script src="js/game.js"></script>
   <script>
   var imagePreloader = new Preloader.ImagePreloader({
-    bullet: "laser.png",
-    ship: "ship.png",
-    m1: "m1.png",
-    m2: "m2.png",
-    bg: "darkPurple.png"
+    bullet: "assets/images/laser.png",
+    ship:   "assets/images/ship.png",
+    m1:     "assets/images/m1.png",
+    m2:     "assets/images/m2.png",
+    bg:     "assets/images/darkPurple.png"
   }, function(images) {
       var canvas = document.getElementsByTagName("canvas")[0];
       var ctx = canvas.getContext('2d');
