--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <h1>'STROIDS</h1>
-  <canvas width="500" height="500"></canvas>
+  <canvas contenteditable="true" width="500" height="500"></canvas>
 
   <script src="js/underscore.js"></script>
   <script src="js/keymaster.js"></script>
