Remap keys to avoid moving window while playing

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
   <h1>'STROIDS</h1>
+  <p class="instructions">WASD to move. N to fire.</p>
   <canvas contenteditable="true" width="500" height="500"></canvas>
 
   <script src="js/underscore.js"></script>
